--- a/MSGame/game.vcxproj
+++ b/MSGame/game.vcxproj
@@ -336,6 +336,28 @@
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
+    <Image Include="..\..\Desktop\3_19\mons\crab\crab_left1.bmp" />
+    <Image Include="..\..\Desktop\3_19\mons\crab\crab_left2.bmp" />
+    <Image Include="..\..\Desktop\3_19\mons\crab\crab_left_die1.bmp" />
+    <Image Include="..\..\Desktop\3_19\mons\crab\crab_left_die2.bmp" />
+    <Image Include="..\..\Desktop\3_19\mons\crab\crab_left_die3.bmp" />
+    <Image Include="..\..\Desktop\3_19\mons\crab\crab_left_die4.bmp" />
+    <Image Include="..\..\Desktop\3_19\mons\crab\crab_left_hurt.bmp" />
+    <Image Include="..\..\Desktop\3_19\mons\crab\crab_left_walk1.bmp" />
+    <Image Include="..\..\Desktop\3_19\mons\crab\crab_left_walk2.bmp" />
+    <Image Include="..\..\Desktop\3_19\mons\crab\crab_left_walk3.bmp" />
+    <Image Include="..\..\Desktop\3_19\mons\crab\crab_left_walk4.bmp" />
+    <Image Include="..\..\Desktop\3_19\mons\crab\crab_right1.bmp" />
+    <Image Include="..\..\Desktop\3_19\mons\crab\crab_right2.bmp" />
+    <Image Include="..\..\Desktop\3_19\mons\crab\crab_right_die1.bmp" />
+    <Image Include="..\..\Desktop\3_19\mons\crab\crab_right_die2.bmp" />
+    <Image Include="..\..\Desktop\3_19\mons\crab\crab_right_die3.bmp" />
+    <Image Include="..\..\Desktop\3_19\mons\crab\crab_right_die4.bmp" />
+    <Image Include="..\..\Desktop\3_19\mons\crab\crab_right_hurt.bmp" />
+    <Image Include="..\..\Desktop\3_19\mons\crab\crab_right_walk1.bmp" />
+    <Image Include="..\..\Desktop\3_19\mons\crab\crab_right_walk2.bmp" />
+    <Image Include="..\..\Desktop\3_19\mons\crab\crab_right_walk3.bmp" />
+    <Image Include="..\..\Desktop\3_19\mons\crab\crab_right_walk4.bmp" />
     <Image Include="Resource\Character\attack\character_left_attack1_1.bmp" />
     <Image Include="Resource\Character\attack\character_left_attack1_2.bmp" />
     <Image Include="Resource\Character\attack\character_left_attack1_3.bmp" />
@@ -368,6 +390,28 @@
     <Image Include="Resource\Character\character_right_walk2.bmp" />
     <Image Include="Resource\gameover.bmp" />
     <Image Include="Resource\menu.bmp" />
+    <Image Include="Resource\Monster\crab\crab_left1.bmp" />
+    <Image Include="Resource\Monster\crab\crab_left2.bmp" />
+    <Image Include="Resource\Monster\crab\crab_left_die1.bmp" />
+    <Image Include="Resource\Monster\crab\crab_left_die2.bmp" />
+    <Image Include="Resource\Monster\crab\crab_left_die3.bmp" />
+    <Image Include="Resource\Monster\crab\crab_left_die4.bmp" />
+    <Image Include="Resource\Monster\crab\crab_left_hurt.bmp" />
+    <Image Include="Resource\Monster\crab\crab_left_walk1.bmp" />
+    <Image Include="Resource\Monster\crab\crab_left_walk2.bmp" />
+    <Image Include="Resource\Monster\crab\crab_left_walk3.bmp" />
+    <Image Include="Resource\Monster\crab\crab_left_walk4.bmp" />
+    <Image Include="Resource\Monster\crab\crab_right1.bmp" />
+    <Image Include="Resource\Monster\crab\crab_right2.bmp" />
+    <Image Include="Resource\Monster\crab\crab_right_die1.bmp" />
+    <Image Include="Resource\Monster\crab\crab_right_die2.bmp" />
+    <Image Include="Resource\Monster\crab\crab_right_die3.bmp" />
+    <Image Include="Resource\Monster\crab\crab_right_die4.bmp" />
+    <Image Include="Resource\Monster\crab\crab_right_hurt.bmp" />
+    <Image Include="Resource\Monster\crab\crab_right_walk1.bmp" />
+    <Image Include="Resource\Monster\crab\crab_right_walk2.bmp" />
+    <Image Include="Resource\Monster\crab\crab_right_walk3.bmp" />
+    <Image Include="Resource\Monster\crab\crab_right_walk4.bmp" />
     <Image Include="Resource\Monster\green\green_left1.bmp" />
     <Image Include="Resource\Monster\green\green_left2.bmp" />
     <Image Include="Resource\Monster\green\green_left_die1.bmp" />
@@ -454,6 +498,30 @@
     <Image Include="Resource\Monster\snake\snake_right_walk3.bmp" />
     <Image Include="Resource\Monster\snake_left.bmp" />
     <Image Include="Resource\Monster\snake_right.bmp" />
+    <Image Include="Resource\Monster\star\star_left_die1.bmp" />
+    <Image Include="Resource\Monster\star\star_left_die2.bmp" />
+    <Image Include="Resource\Monster\star\star_left_die3.bmp" />
+    <Image Include="Resource\Monster\star\star_left_die4.bmp" />
+    <Image Include="Resource\Monster\star\star_left_die5.bmp" />
+    <Image Include="Resource\Monster\star\star_left_hurt.bmp" />
+    <Image Include="Resource\Monster\star\star_left_walk1.bmp" />
+    <Image Include="Resource\Monster\star\star_left_walk2.bmp" />
+    <Image Include="Resource\Monster\star\star_left_walk3.bmp" />
+    <Image Include="Resource\Monster\star\star_left_walk4.bmp" />
+    <Image Include="Resource\Monster\star\star_left_walk5.bmp" />
+    <Image Include="Resource\Monster\star\star_left_walk6.bmp" />
+    <Image Include="Resource\Monster\star\star_right_die1.bmp" />
+    <Image Include="Resource\Monster\star\star_right_die2.bmp" />
+    <Image Include="Resource\Monster\star\star_right_die3.bmp" />
+    <Image Include="Resource\Monster\star\star_right_die4.bmp" />
+    <Image Include="Resource\Monster\star\star_right_die5.bmp" />
+    <Image Include="Resource\Monster\star\star_right_hurt.bmp" />
+    <Image Include="Resource\Monster\star\star_right_walk1.bmp" />
+    <Image Include="Resource\Monster\star\star_right_walk2.bmp" />
+    <Image Include="Resource\Monster\star\star_right_walk3.bmp" />
+    <Image Include="Resource\Monster\star\star_right_walk4.bmp" />
+    <Image Include="Resource\Monster\star\star_right_walk5.bmp" />
+    <Image Include="Resource\Monster\star\star_right_walk6.bmp" />
     <Image Include="Resource\Stage1BG.bmp" />
     <Image Include="Resource\stage1text.bmp" />
     <Image Include="Resource\Stage2BG.bmp" />
